--- a/src/Mail.css
+++ b/src/Mail.css
@@ -1,5 +1,49 @@
+.mail {
+  flex: 1;
+}
+
 .mail_tools {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 2px solid whitesmoke;
+}
+
+.mail_body {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  height: 100vh;
+}
+
+.mail_body_header {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  padding-top: 0;
+  position: relative;
+}
+
+.mail_body_header > h2 {
+  font-weight: 400;
+  margin-right: 20px;
+}
+
+.mail_important {
+  color: #e8ab02 !important;
+  margin-right: 10px;
+}
+
+.mail_message > p {
+  padding: 10px;
+  margin-right: 20px;
+  overflow-wrap: break-word;
+}
+
+.mail_time {
+  position: absolute;
+  top: 24px;
+  right: 0;
+  font-size: 12px;
+  color: gray;
 }
